{
    "name": "MainControls",
    "maps": [
        {
            "name": "Player",
            "id": "32967f2b-bc43-45dc-a505-bcd32627626f",
            "actions": [
                {
                    "name": "LeftHit",
                    "type": "Button",
                    "id": "f35a248a-0557-47ef-bfad-e2dd3f8b0ee7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightHit",
                    "type": "Button",
                    "id": "a747e692-2eb4-4c91-949e-fb787feba258",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7cc476c4-6230-45f2-902b-2ff3b50d158f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be26a527-c0aa-4e02-a0dd-32983a3cea2d",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d17021e-7007-455d-a24e-77face5e2b55",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d76dd696-a7ba-4b3f-aa0d-180fe21e0562",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}